<resources>
    <string name="app_name">test_shop</string>
    <string name="sign_in">Sign in</string>
    <string name="log_in">Log in</string>
    <string name="already_hav">Already have an account?</string>
    <string name="sign_in2">Sign in</string>
    <string name="email">Email</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="sign_in_wit">Sign in with Apple</string>
    <string name="sign_in_wit2">Sign in with Google</string>
    <string name="time">9:41</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_bac">Welcome back</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
</resources>