<?xml version="1.0" encoding="utf-8"?>
<!-- sign in page -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sign_in_pag"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="@drawable/sign_in_pag">

    <!-- Group 5 -->
    <View
        android:id="@+id/group_5"
        android:layout_width="289dp"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="43dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="427dp"
        android:background="#00000000"
        />



    <!-- button -->
    <View
        android:id="@+id/button"
        android:layout_width="289dp"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="43dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="427dp"
        android:background="@drawable/button"
        />

    <!-- Sign in -->
    <TextView
        android:id="@+id/sign_in2"
        android:layout_width="64dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="156dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="441dp"
        android:text="@string/sign_in2"
        android:textAppearance="@style/sign_in2"
        android:gravity="center_horizontal|top"
        />

    <!-- Log in -->
    <TextView
        android:id="@+id/log_in"
        android:layout_width="35dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="170dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="488dp"
        android:text="@string/log_in"
        android:textAppearance="@style/log_in"
        android:gravity="center_horizontal|top"
        />

    <!-- Already have an account? -->
    <TextView
        android:id="@+id/already_hav"
        android:layout_width="129dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="42dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="488dp"
        android:text="@string/already_hav"
        android:textAppearance="@style/already_hav"
        android:gravity="top"
        />

    <!-- Rectangle 5 -->
    <View
        android:id="@+id/rectangle_5"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="44dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="363dp"
        android:background="@drawable/rectangle_5"
        />

    <!-- Email -->
    <TextView
        android:id="@+id/email"
        android:layout_width="83dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="146dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="370dp"
        android:text="@string/email"
        android:textAppearance="@style/email"
        android:gravity="center_horizontal|top"
        />

    <!-- Group 3 -->
    <View
        android:id="@+id/group_3"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="44dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="299dp"
        android:background="#00000000"
        />

    <!-- Rectangle 3 -->
    <View
        android:id="@+id/rectangle_3"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="44dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="299dp"
        android:background="@drawable/rectangle_3"
        />

    <!-- Last name -->
    <TextView
        android:id="@+id/last_name"
        android:layout_width="112dp"
        android:layout_height="15dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="132dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="306dp"
        android:text="@string/last_name"
        android:textAppearance="@style/last_name"
        android:gravity="center_horizontal|top"
        />

    <!-- Group 2 -->
    <View
        android:id="@+id/group_2"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="44dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="235dp"
        android:background="#00000000"
        />

    <!-- Rectangle 2 -->
    <View
        android:id="@+id/rectangle_2"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="44dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="235dp"
        android:background="@drawable/rectangle_2"
        />

    <!-- First name -->
    <TextView
        android:id="@+id/first_name"
        android:layout_width="112dp"
        android:layout_height="15dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="132dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="242dp"
        android:text="@string/first_name"
        android:textAppearance="@style/first_name"
        android:gravity="center_horizontal|top"
        />

    <!-- Sign in -->
    <TextView
        android:id="@+id/sign_in"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="112dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="127dp"
        android:text="@string/sign_in"
        android:textAppearance="@style/sign_in"
        android:gravity="center_horizontal|top"
        />

    <!-- Group 124 -->
    <View
        android:id="@+id/group_124"
        android:layout_width="139dp"
        android:layout_height="21.87dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="99dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="636.22dp"
        android:background="#00000000"
        />

    <!-- Sign in with Apple -->
    <TextView
        android:id="@+id/sign_in_wit"
        android:layout_width="107dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="131dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="640.22dp"
        android:text="@string/sign_in_wit"
        android:textAppearance="@style/sign_in_wit"
        android:gravity="top"
        />

    <!-- Vector -->
    <!--View
        android:id="@+id/vector"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/vector"
        /-->

    <!-- Group 123 -->
    <View
        android:id="@+id/group_123"
        android:layout_width="152dp"
        android:layout_height="24.22dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="99dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="574dp"
        android:background="#00000000"
        />

    <!-- Sign in with Google -->
    <TextView
        android:id="@+id/sign_in_wit2"
        android:layout_width="117dp"
        android:layout_height="16dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="134dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="580dp"
        android:text="@string/sign_in_wit2"
        android:textAppearance="@style/sign_in_wit2"
        android:gravity="top"
        />

    <!--View
        android:id="@+id/vector2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/vector2"
        /-->

    <!--RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/system_ligh"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-48dp"
        android:background="@drawable/system_ligh"
        /-->

    <!--View
        android:id="@+id/home_indica"
        android:layout_width="134dp"
        android:layout_height="5dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:background="@drawable/home_indica"
        /-->

    <!--RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/system_ligh2"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-24dp"
        android:background="@drawable/system_ligh2"/-->

    <!--View
        android:id="@+id/notch"
        android:layout_width="219dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/notch"
        /-->

    <!--TextView
        android:id="@+id/time"
        android:layout_width="54dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="21dp"
        android:layout_centerVertical="true"
        android:text="@string/time"
        android:textAppearance="@style/time"
        android:gravity="center_horizontal|top"
        /-->

    <!--View
        android:id="@+id/cellular_co"
        android:layout_width="17dp"
        android:layout_height="10.67dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="64dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17.67dp"
        android:background="@drawable/cellular_co"
        /-->

    <!-- Wifi -->
    <!--View
        android:id="@+id/wifi"
        android:layout_width="15.33dp"
        android:layout_height="11dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="43.67dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17.33dp"
        android:background="@drawable/wifi"
        /-->

    <!-- Battery -->
    <!--View
        android:id="@+id/battery"
        android:layout_width="24.33dp"
        android:layout_height="11.33dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="336.33dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17.33dp"
        android:background="#00000000"
        /-->

    <!-- Capacity -->
    <!--View
        android:id="@+id/capacity"
        android:layout_width="18dp"
        android:layout_height="7.33dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="18.67dp"
        android:layout_centerVertical="true"
        android:background="@drawable/capacity"
        /-->

    <!-- Cap -->
    <!--View
        android:id="@+id/cap"
        android:layout_width="1.33dp"
        android:layout_height="4dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="14.34dp"
        android:layout_centerVertical="true"
        android:background="@drawable/cap"
        android:alpha="0.4"
        /-->

    <!-- Border -->
    <!--View
        android:id="@+id/border"
        android:layout_width="22dp"
        android:layout_height="11.33dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16.67dp"
        android:layout_centerVertical="true"
        android:background="@drawable/border"
        android:alpha="0.35"
        /-->



</RelativeLayout>


